testsuite/tests/linear/should_fail/T18888_datakinds.stderr
T18888_datakinds.hs:5:9: error: [GHC-83865]
    • Expected kind ‘GHC.Types.Multiplicity’,
        but ‘001’ has kind ‘GHC.Internal.Bignum.Natural.Natural’
    • In the type signature: f :: a %001 -> b

